WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230040
RenderInline offsetTop/Left should not switch to legacy layout
https://bugs.webkit.org/show_bug.cgi?id=230040
Summary
RenderInline offsetTop/Left should not switch to legacy layout
Antti Koivisto
Reported
2021-09-08 04:56:44 PDT
Use LFC
Attachments
patch
(4.96 KB, patch)
2021-09-08 04:59 PDT
,
Antti Koivisto
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
patch
(7.95 KB, patch)
2021-09-08 07:48 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(7.94 KB, patch)
2021-09-08 08:23 PDT
,
Antti Koivisto
zalan
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
patch
(11.21 KB, patch)
2021-09-08 21:59 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-09-08 04:59:31 PDT
Created
attachment 437619
[details]
patch
Antti Koivisto
Comment 2
2021-09-08 07:48:54 PDT
Created
attachment 437626
[details]
patch
Antti Koivisto
Comment 3
2021-09-08 08:23:21 PDT
Created
attachment 437628
[details]
patch
Antti Koivisto
Comment 4
2021-09-08 21:59:22 PDT
Created
attachment 437710
[details]
patch
EWS
Comment 5
2021-09-09 01:17:14 PDT
Committed
r282202
(
241489@main
): <
https://commits.webkit.org/241489@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437710
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-09-09 01:18:22 PDT
<
rdar://problem/82914288
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug