RenderInline offsetTop/Left should not switch to legacy layout https://bugs.webkit.org/show_bug.cgi?id=230040

Reviewed by Alan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/css/cssom-view/offsetTopLeft-empty-inline-expected.txt:
* web-platform-tests/css/cssom-view/offsetTopLeft-leading-space-inline-expected.txt:

Source/WebCore:

Get position of the LFC inline box.

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::firstInlineBoxRect const):
* layout/integration/LayoutIntegrationLineLayout.h:
* rendering/RenderInline.cpp:
(WebCore::RenderInline::offsetLeft const):
(WebCore::RenderInline::offsetTop const):
(WebCore::RenderInline::firstInlineBoxTopLeft const):
(WebCore::RenderInline::positionForPoint const):

Also fix positionForPoint as a failing test revealed a missing LFC path here.

* rendering/RenderInline.h:

LayoutTests:

* editing/selection/doubleclick-beside-cr-span.html:

Update the test for more standards compliant first inline box position.


Canonical link: https://commits.webkit.org/241489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282202 268f45cc-cd09-0410-ab3c-d52691b4dbfc