Source/WebCore/layout/integration/LayoutIntegrationLineLayout.h
@@ -96,6 +96,7 @@ public:
     LineIterator firstLine() const;
     LineIterator lastLine() const;
 
+    LayoutRect firstInlineBoxRect(const RenderInline&) const;
     LayoutRect enclosingBorderBoxRectFor(const RenderInline&) const;
     LayoutRect visualOverflowBoundingBoxRectFor(const RenderInline&) const;
     Vector<FloatRect> collectInlineBoxRects(const RenderInline&) const;
